Update and rename 2025-05-12-api-soap.md to 2025-05-26-api-soap.md
Signed-off-by: jisu <147144098+clsclffk@users.noreply.github.com>

--- a/_posts/2025-05-26-api-soap.md
+++ b/_posts/2025-05-26-api-soap.md
@@ -33,13 +33,31 @@ comments: true
 ### REST와 SOAP의 차이
 
 공공데이터 API를 사용하다 보면 REST API와 SOAP API라는 두 가지 방식이 섞여 있는 것을 발견하게 된다.
-REST API는 URL과 파라미터를 통해 간단히 데이터를 요청하고, JSON 형식의 직관적인 응답을 받을 수 있다.
-예를 들어 requests.get()을 사용해 쉽게 호출할 수 있고, 대부분의 최신 API가 이 방식으로 제공된다.
-반면 SOAP API는 훨씬 복잡하다. 요청을 보낼 때 단순한 URL 호출로는 불가능하며, 반드시 XML 형식의 Envelope을 만들어 POST 요청으로 전송해야 한다.
-또한 응답도 JSON이 아닌 XML로 주어지기 때문에, 별도의 XML 파싱 작업이 필요하다.
-Python으로 SOAP API를 호출하려면 requests만으로는 부족하고, `zeep`과 같은 SOAP 클라이언트 라이브러리를 사용해야 한다.
-결과적으로 REST는 가볍고 접근하기 쉽지만, SOAP은 복잡하고 무거우며, API를 처음 접하는 사람들에게는 큰 진입장벽이 될 수 있다.
-이러한 차이 때문에 REST API는 대부분의 최신 서비스에서 기본으로 사용되지만, 오래된 시스템에서는 여전히 SOAP 방식이 남아 있는 경우가 많다.
+
+REST API는 URL과 파라미터를 통해 간단히 데이터를 요청하고, JSON 형식의 직관적인 응답을 받을 수 있다. 예를 들어 requests.get()을 사용해 쉽게 호출할 수 있고, 대부분의 최신 API가 이 방식으로 제공된다.
+
+반면 SOAP API는 훨씬 복잡하다. 요청을 보낼 때 단순히 URL 호출만으로는 되지 않고, 반드시 XML 형식의 Envelope 구조를 만들어서 POST 요청으로 보내야 한다. 이 Envelope는 SOAP 요청과 응답의 틀 역할을 하며, 대략 다음과 같은 형태를 가진다:
+```
+<soapenv:Envelope xmlns:soapenv="http://schemas.xmlsoap.org/soap/envelope/">
+  <soapenv:Body>
+    <soapenv:Fault>
+      <faultcode>soapenv:Server</faultcode>
+      <faultstring>Policy Falsified</faultstring>
+      <faultactor>https://apis.data.go.kr/B551011/KorService2/IdongCode2?...</faultactor>
+      <detail>
+        <l7:policyResult xmlns:l7="http://www.layer7tech.com/ws/policy/fault" status="Service Not Found. The request may have been sent to an invalid URL, or intended for an unsupported operation."/>
+      </detail>
+    </soapenv:Fault>
+  </soapenv:Body>
+</soapenv:Envelope>
+```
+
+이처럼 SOAP 요청과 응답은 항상 <Envelope> 태그로 감싸지며, 그 안에 <Body>와 <Fault> 같은 요소들이 포함된다.
+Python에서는 이런 XML 구조를 직접 작성하거나, zeep 같은 라이브러리를 통해 생성해야 한다.
+반면 REST API는 URL에 파라미터만 추가해 GET 요청으로 데이터를 가져올 수 있고, 응답도 JSON으로 주어지기 때문에 더 직관적이고 사용하기 쉽다.
+
+이러한 이유로 최신 API는 대부분 REST 방식으로 제공되지만, 일부 오래된 시스템에서는 여전히 SOAP 방식을 사용하는 경우가 있다.
+
 
 ### 💡 해결 방법: SOAP API, 정말 필요한가?
 
